[package]
name = "archive-processor-py-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "archive_processor_py_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["anyhow"] }
pyo3-asyncio = { version = "0.20", features = [
    "tokio",
    "tokio-runtime",
    "attributes",
    "pyo3-asyncio-macros",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures-lite = { version = "2", default-features = false, features = ["std"] }
datafusion = { version = "38", features = ["pyarrow"] }
parquet = "51"
async_zip = { version = "0.0.17", features = ["full", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"